*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-158.htm
@@ -16,11 +16,11 @@
       <img src="../images/tasks-32.gif" alt="Parameters Page for the Reordering method parameters Refactoring Command">
     </h1>
     
-<p> Parameters Page for the Change Method Signature refactoring command </p>
+<p> Parameters Page for the Change Method Signature Refactoring Command </p>
 <ul>
-  <li>Select one or more parameters and use the <strong>Move Up</strong> and <strong>Move 
-    Down</strong> buttons to reorder the parameters (you can see a signature preview 
-    below the parameter list) </li>
+  <li>Select one or more parameters and use the <strong>Up</strong> and <strong>Down</strong> 
+    buttons to reorder the parameters (you can see a signature preview below the 
+    parameter list) </li>
   <li>Use the <b>Add</b> button to add a paremeter; you can then edit its type, 
     name and default value in the table</li>
   <li> Press <strong>Preview</strong> to see the preview or <strong>OK</strong> 
