--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-212.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-212.htm
@@ -16,7 +16,7 @@
     <ol>
       <li>Select the <span class="control">Filters</span> command from the Package Explorer's drop-down menu.</li>
 
-      <li>Clear the <span class="control">Import declarations</span> checkbox.</li>
+      <li>In the exclude list clear the checkbox for <span class="control">Import declarations</span>.</li>
     </ol>
 
     <p>To hide non-Java elements:</p>
@@ -24,7 +24,7 @@
     <ol>
       <li>Select the <span class="control">Filters</span> command from the Package Explorer's drop-down menu.</li>
 
-      <li>Select the <span class="control">Import declarations</span> checkbox.</li>
+      <li>In the exclude list select the checkbox for <span class="control">Import declarations</span>.</li>
     </ol>
 
     <p><img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
