--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
@@ -21,7 +21,7 @@
         Select the container where you want the new class to reside.
       </li>
       <li>
-        Click the&nbsp;<strong>Create a Java Interface</strong> button in the workbench toolbar.
+        From the drop-down menu on the <strong>New Java Class</strong> button in the workbench toolbar, select <strong>Interface</strong>.
       </li>
     </ol>
     <p>
@@ -43,14 +43,14 @@
         Select the container where you want the new class to reside.
       </li>
       <li>
-        From the drop-down menu on the&nbsp;<strong>Open The New Wizard</strong> button in the workbench toolbar, select <strong>Interface</strong>.
+        From the drop-down menu on the <strong>New</strong> button in the workbench toolbar, select <strong>Interface</strong>.
       </li>
     </ol>
     <p>
       or
     </p>
     <p>
-      Click the&nbsp;<strong>Open The New Wizard</strong> button. In the left pane, select <strong>Java</strong>, and in the right pane, select
+      Click the <strong>New</strong> button. In the left pane, select <strong>Java</strong>, and in the right pane, select
       <strong>Interface</strong>.
     </p>
     <p>
