--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
@@ -30,7 +30,7 @@
         new interface to reside. If you want the new interface to be created in the default package, leave this field empty.
       </li>
       <li>
-        Clear the&nbsp;<strong>Enclosing Type</strong> check box.
+        Clear the&nbsp;<strong>Enclosing type</strong> check box.
       </li>
       <li>
         In the&nbsp;<strong>Name</strong> field, type a name for the new interface.
