--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-24.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-24.htm
@@ -26,10 +26,10 @@
         <strong>Source&nbsp;</strong>Folder field as the container for the new interface.
       </li>
       <li>
-        Select the&nbsp;<strong>Enclosing Type</strong> check box.
+        Select the&nbsp;<strong>Enclosing type</strong> check box.
       </li>
       <li>
-        In the&nbsp;<strong>Enclosing Type</strong> field, type the name of the enclosing type or click the&nbsp;<strong>Browse</strong> button
+        In the&nbsp;<strong>Enclosing type</strong> field, type the name of the enclosing type or click the&nbsp;<strong>Browse</strong> button
         to select the enclosing type for the new interface.
       </li>
       <li>
