more changes as suggested by susan

--- a/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
+++ b/bundles/org.eclipse.jdt.doc.user/tips/jdt_tips.html
@@ -38,9 +38,9 @@
 				height="73" alt="Parameter Hint Hover"></td>
 		</tr>
 		<tr>
-			<td width="20%" valign="top" align="right"><b>Code assist on
+			<td width="20%" valign="top" align="right"><b>Content assist on
 			anonymous classes</b></td>
-			<td valign="top" align="left" width="80%">Code assist also provides
+			<td valign="top" align="left" width="80%">Content assist also provides
 			help when creating an anonymous class. With the cursor positioned
 			after the opening bracket of a class instance creation, invoke <b>Edit
 			/ Content Assist</b> or press <b>Ctrl+Space</b>.<br>
@@ -57,7 +57,7 @@
 			<ul>
 				<li>From base classes you can override or implement methods. Between
 				methods select the <b>'Override / Implement Methods'</b> action,
-				then <b>Code Assist</b> or on an error for unimplemented methods
+				then <b>Content Assist</b> or on an error for unimplemented methods
 				select <b>Quick Fix</b>.</li>
 				<li>You can create delegate methods, setters and getters using the
 				corresponding actions in the source or context menu.</li>
@@ -66,7 +66,7 @@
 				while dropping to create a 'link'.</li>
 				<li>You can define a new template <b>(Preferences / Java / Editor /
 				Templates)</b> that contains a method stub. Templates are shown
-				together with the <b>Code Assist</b> (Ctrl+Space) proposals.</li>
+				together with the  <b>Content Assist(Ctrl+Space)</b> proposals.</li>
 				<li>Start with the method invocation and use <b>Quick Fix (Ctrl+1)</b>
 				to create the method.<br>
 				<img border="0" src="images/quick-fix-create-method.gif"
@@ -83,8 +83,8 @@
 				<li>Select the type to add the methods to and invoke <b>'Override /
 				Implement Methods'</b>, from the source or context menu. This opens
 				a dialog that lets you choose which methods to override.</li>
-				<li>Invoke <b>Code Assist (Ctrl+Space)</b> in the type body at the
-				place where the method should be added. Code assist will offer all
+				<li>Invoke <b>Content Assist (Ctrl+Space)</b> in the type body at the
+				place where the method should be added. Content assist will offer all
 				methods that can be overwritten. A method body for the chosen method
 				will be created.<br>
 				<img border="0" src="images/code-assist-newmethod.gif"
@@ -275,7 +275,7 @@
 			the source code.<br>
 			<img border="0" src="images/editor-code-hover.gif"
 				alt="Hover showing code of the element in the hover"> <br>
-			You can configure the content of the hover in <b>Preferences / Java /
+			You can change this behaviour and define the hovers for other modifier keys in <b>Preferences / Java /
 			Editor / Hovers</b>.</td>
 		</tr>
 		<tr>
@@ -361,7 +361,7 @@
 			the prefix or suffix for fields, you can also specify the prefix or
 			suffix for static fields, parameters, and local variables. These
 			settings on the <b>Java / Code Generation</b> preference page are
-			used in code assist, quick fix, and refactoring whenever a variable
+			used in content assist, quick fix, and refactoring whenever a variable
 			name needs to be computed. <br>
 			<img border="0" src="images/name-conventions.gif"
 				alt="Name convensions in Code Generation preference page"></td>
@@ -372,8 +372,8 @@
 			<td valign="top" align="left" width="80%">The <b>Java / Code
 			Generation</b> preference page allows you to customize generated code
 			and comments in a similar way to normal templates. These code
-			templates are used whenever code is generated. (The comments replace
-			the existing 'filecomment' and 'typecomment' templates used for code
+			templates are used whenever code is generated. (These new templates are replacing
+			the 'filecomment' and 'typecomment' templates previously used for code
 			generation.) <br>
 			<img border="0" src="images/code-templates.gif"
 				alt="Code templates preference page">
