--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
@@ -11,37 +11,41 @@
   <body>
     <h1>Key/value page</h1>
 
-    <h1><img src="../images/tasks-189a.gif" alt="Externalize Strings Key/value page" height="708" width="507"></h1>
+    
+<h1><img src="../images/tasks-189a.gif" alt="Externalize Strings Key/value page"></h1>
 
     <p>Externalize Strings Key/value page</p>
 
+    
+<ul>
+  <li>In the <span class="control">Enter common prefix for generated keys</span> 
+    text field, you can specify an optional prefix that will be used for all keys.</li>
+  <li> Select one or more entries in the table and: 
     <ul>
-      <li>In the <span class="control">Enter common prefix for generated keys</span> text field, you can specify an optional prefix that will be used for all keys.</li>
-
-      <li>
-        Select one or more entries in the table and: 
-
-        <ul>
-          <li>Press the <span class="control">Translate</span> button to mark them as entries to externalize or</li>
-
-          <li>Press the <span class="control">Never Translate</span> button to mark them as entries to be not externalized</li>
-
-          <li>Press the <span class="control">Skip</span> button to mark them as entries excluded from externalization</li>
-        </ul>
-      </li>
-
-      <li>Icons on the left side of the entries are updated and so are the counter below the table</li>
-
-      <li>To edit a key, single-click on a row in the <span class="control">Key</span> column. You can edit the key in-place.</li>
-
-      <li>Press <span class="control">Next</span> to proceed to the Property File page or press <span class="control">Finish</span> to externalize strings without checking the
-      settings from the Property File page (if you are not familiar with the externalize strings functionality, it is recommended that you press <span class="control">Next</span>
-      to proceed to the Property File page).</li>
+      <li>Press the <span class="control">Translate</span> button to mark them 
+        as entries to externalize or</li>
+      <li>Press the <span class="control">Never Translate</span> button to mark 
+        them as entries to be not externalized</li>
+      <li>Press the <span class="control">Skip</span> button to mark them as entries 
+        excluded from externalization</li>
     </ul>
-    Note: You can double-click on the icons that are displayed on the left side of the table entries to alternate the state between <span class="control">Translate</span>, <span
+  </li>
+  <li>Icons on the left side of the entries are updated and so are the counter 
+    below the table</li>
+  <li>To edit a key, single-click on a row in the <span class="control">Key</span> 
+    column. You can edit the key in-place. You can also press the <b>Edit Key</b> 
+    button and edit the key in the dialog that appears then.</li>
+  <li>Press <span class="control">Next</span> to proceed to the Property File 
+    page or press <span class="control">Finish</span> to externalize strings without 
+    checking the settings from the Property File page (if you are not familiar 
+    with the externalize strings functionality, it is recommended that you press 
+    <span class="control">Next</span> to proceed to the Property File page).</li>
+</ul>
+Note: You can double-click on the icons that are displayed on the left side of 
+the table entries to alternate the state between <span class="control">Translate</span>, 
+<span
     class="control">Never Translate</span> and <span class="control">Skip</span> 
-
-    <p>Note (explanation of table entry states):</p>
+<p>Note (explanation of table entry states):</p>
 
     <ul>
       <li>Strings from entries marked as <span class="control">'Translate'</span> will be externalized and marked as such in the Java file by adding non-nls tags.</li>
