--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
@@ -19,10 +19,7 @@
         In the Package Explorer, select the project where you want the new source folder to reside.
       </li>
       <li>
-        From the project's pop-up menu, select <strong>New</strong> &gt; <strong>Others</strong>. The new wizard opens.
-      </li>
-      <li>
-        Select Java from the left pane and Source Folder from the right pane, then click <strong>Next</strong>. The New Source Folder wizard opens.
+        From the project's pop-up menu, select <strong>New</strong> &gt; <strong>Source Folder</strong>. The New Source Folder wizard opens.
       </li>
       <li>
         In the&nbsp;<strong>Project Name</strong> field, the name of the selected project appears. If you need to edit this field, you can either type a path or
