--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-3.htm
@@ -19,7 +19,7 @@
       Select the <strong>Filters</strong> command from the Package Explorer view drop-down menu.
     </li>
     <li>
-      Clear the <strong>&nbsp;.* files</strong> checkbox.
+      In the exclude list clear the checkbox for <span class="control">.* files</span>.
     </li>
     </ol>
     <p>
@@ -30,7 +30,8 @@
       Select the <strong>Filters</strong> command from the Package Explorer view drop-down menu.
     </li>
     <li>
-      Select the <strong>.* files</strong> checkbox. This hides files that have only a file extension but no file name, such as&nbsp;<em>.classpath</em>.
+      In the exclude list select the checkbox for <span class="control">.* files</span>.
+      This hides files that have only a file extension but no file name, such as <em>.classpath</em>.
     </li>
 	</ol>
     <p>
