--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-30.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-30.htm
@@ -21,19 +21,19 @@
         From the workbench menu bar, select <strong>File</strong> &gt; <strong>Import</strong>. The Import wizard opens
       </li>
       <li>
-        Select&nbsp;<strong>File System</strong>, then click&nbsp;<strong>Next</strong>.
+        Select <strong>File System</strong>, then click <strong>Next</strong>.
       </li>
       <li>
-        In the&nbsp;<strong>Directory</strong> field, type or browse to select the directory where the JAR file resides.
+        In the <strong>From directory</strong> field, type or browse to select the directory where the JAR file resides.
       </li>
       <li>
         In the import selection panes, expand the hierarchy and use the buttons to select the JAR file you want to import.
       </li>
       <li>
-        In the&nbsp;<strong>Select the destination for imported resources</strong> field, type or browse to select a workbench container for the JAR file.
+        In the <strong>Into folder</strong> field, type or browse to select a workbench container for the JAR file.
       </li>
       <li>
-        Click&nbsp;<strong>Finish</strong> when you are done.
+        Click <strong>Finish</strong> when you are done.
       </li>
       <li>
         You now must add the JAR file to the build class path of any projects that need this library.
