*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-StartingNewJavaProject.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-StartingNewJavaProject.htm
@@ -25,48 +25,48 @@
       </li>
       <li>
         On the next page, type &quot;MyProject&quot; in the <strong>Project name</strong> field and click <strong>Next</strong>.<br>
-       <img src="../images/qs-snjp1.gif" alt="Java Project Wizard">
+       <p><img src="../images/qs-snjp1.gif" alt="Java Project Wizard"></p>
       </li>
       <li>From the Source tab, click <strong>Add Folder...</strong>.<br>
-       <img src="../images/qs-snjp2.gif" alt="Java Project Name Setting">
+       <p><img src="../images/qs-snjp2.gif" alt="Java Project Name Setting"></p>
       </li>
       <li>On the next dialog, click <strong>Create New Folder...</strong><br>
-        <img src="../images/qs-snjp3.gif" alt="Add Folder Settings">
+        <p><img src="../images/qs-snjp3.gif" alt="Add Folder Settings"></p>
      </li>
     <li>Type &quot;src&quot; in the <strong>Folder name</strong> field and click <strong>OK</strong>.<br>
     <blockquote>NOTE: If you want to use an existing folder outside of the workspace, you
     check <strong>Link to folder in the file system</strong> and browse to the desired folder.
     </blockquote>
-        <img src="../images/qs-snjp4.gif" alt="Folder Name Settings">
+        <p><img src="../images/qs-snjp4.gif" alt="Folder Name Settings"></p>
     </li>
     <li>Click <strong>OK</strong> again.
     </li>
     <li>You will be prompted to know if you want to remove the project as source folder and update the build output
     folder to &quot;MyProject/bin&quot;. The builder writes the generated .class file to the output folder.
     &quot;MyProject/bin&quot; is considered as the <i>default output folder for the project</i>. Click <strong>Yes</strong>.<br>
-        <img src="../images/qs-snjp5.gif" alt="Create New Java Project">
+        <p><img src="../images/qs-snjp5.gif" alt="Create New Java Project"></p>
    </li>
     <li>You will end up with this wizard.<br>
-        <img src="../images/qs-snjp6.gif" alt="Resulting Java Project Wizard">
+        <p><img src="../images/qs-snjp6.gif" alt="Resulting Java Project Wizard"></p>
     </li>
     <li>If you want to set an output folder  per source folder, you need to check <strong>Allow output folders for source
     folders</strong>.
     Specify the desired output folder by double-clicking on this new item.<br>
-        <img src="../images/qs-snjp7.gif" alt="Setting output folder per source folder">
+        <p><img src="../images/qs-snjp7.gif" alt="Setting output folder per source folder"></p>
     </li>
     <li>You can repeat steps 4 to 7 if you want to create multiple source folders.
     <blockquote>NOTE: You might want to create all source folders at step 6, but be sure you select the project name for each source folder.
     Before clicking <strong>OK</strong>, you need to select <u>all source folders you created</u>.<br>
-        <img src="../images/qs-snjp8.gif" alt="Multiple source folders creation">
+        <p><img src="../images/qs-snjp8.gif" alt="Multiple source folders creation"></p>
     </blockquote>
     Screen shot with multiple source folders:<br>
-    <img src="../images/qs-snjp9.gif" alt="Multiple source folders">
+    <p><img src="../images/qs-snjp9.gif" alt="Multiple source folders"></p>
     </li>
     <li>You now have a new Java Project in which you can add source files. If you don't want the builder to clean up the output folders during
     a full build, go to the <strong>Properties</strong> of your Java Project.
     </li>
     <li>Go to <strong>Java Compiler &gt; Use project settings &gt; Build path...</strong> and uncheck <strong>Scrub output folders on full build</strong>.<br>
-    <img src="../images/qs-snjp10.gif" alt="Setting scrubbing of output folder">
+    <p><img src="../images/qs-snjp10.gif" alt="Setting scrubbing of output folder"></p>
     </li>
 	</ol>    
     <p>
