--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-junit.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-junit.htm
@@ -38,11 +38,15 @@
     </ol>
     Optionally, if you want to browse the JUnit source, then attach the <i>junitsrc.zip</i>
     to the <i> junit.jar</i>. The source zip is located in the org.eclipse.jdt.source
-    plugin in src/org.junit_3.8.1.&nbsp;<p>Now that the JUnitTest project has access to the JUnit classes you can write your
-    first test. You implement the test in a subclass of <strong>TestCase</strong>. You can
-    do so either using the standard Class wizard or the specialized <strong>Test Case </strong>wizard:&nbsp;</p>
+    plugin in src/org.junit_3.8.1.
+    <p>
+      Now that the JUnitTest project has access to the JUnit classes you can write your
+      first test. You implement the test in a subclass of <strong>TestCase</strong>. You can
+      do so either using the standard Class wizard or the specialized <strong>Test Case 
+      </strong> wizard:
+    </p>
     <ol>
-      <li>Open the New wizard</li>
+      <li>Open the New wizard (<strong>File  &gt; New  &gt; Other...</strong>)</li>
       <li>Select <strong>Java &gt; JUnit</strong> in the left pane
         and <strong>TestCase</strong> in the right pane and click <strong>Next</strong>.</li>
       <li>Enter &quot;<i>TestFailure&quot;</i> as the name of your test class:
@@ -54,16 +58,18 @@
       </li>
     </ol>
     
-    <p>Add a test method that fails to the class <i>TestFailure</i>. A quick
-        way to enter a test method is with the <i>test</i> template. To do so
-        type &quot;test&quot; followed by Ctrl+Space to activate code
-        assist and select the &quot;test&quot; template. Change the name of the
-    created method to <i>testFailure</i> and invoke the <i>fail() </i>method.</p>
-
-       <code>public void testFailure() {<br>
-       &nbsp;&nbsp;&nbsp; fail();<br>
-       }
-    </code>   
+    <p>
+      Add a test method that fails to the class <i>TestFailure</i>. A quick
+      way to enter a test method is with the <i>test</i> template. To do so
+      type &quot;test&quot; followed by Ctrl+Space to activate code
+      assist and select the &quot;test&quot; template. Change the name of the
+      created method to <i>testFailure</i> and invoke the <i>fail() </i>method.
+    </p>
+    <p><code>
+      public void testFailure() {<br>
+      &nbsp;&nbsp;&nbsp; fail();<br>
+      }
+    </code></p>
      
     <p>Now you are ready to run your first test.</p>
 
