--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-3.htm
@@ -25,7 +25,7 @@
       <li>
         On the left pane of the first wizard page, select <strong>Java</strong>, and on the right pane, select <strong>Java Project</strong>. Then click <strong>Next</strong>.
         On the next page, type &quot;JUnit&quot; in the <strong>Project name</strong> 
-        field and click <strong>Finish</strong>.&nbsp; A Java perspective opens within the workbench with the new Java
+        field and click <strong>Finish</strong>. A Java perspective opens within the workbench with the new Java
         project in the Package Explorer. When the Java perspective is active, new menu options and Java specific buttons are loaded in the workbench toolbar. Depending on which
         view or editor is active, other buttons and menu options will be available.
 		<p>
@@ -41,7 +41,7 @@
       <li>
         Click the <strong>Browse</strong> button next to the <strong>Zip file</strong> field and browse to select
         &lt;workbenchRoot&gt;/plugins/org.eclipse.jdt.ui.examples.projects/archive/junit/junit37src.jar.<br>
-         <strong>Note:</strong> This step assumes that the JDT example&nbsp;plug-ins have been downloaded and installed.<br>
+         <strong>Note:</strong> This step assumes that the JDT example plug-ins have been downloaded and installed.<br>
       </li>
       <li>
         Below the hierarchy list in the Import wizard, click the <strong>Select All</strong> button. You can expand and select elements within the <em>junit</em> directory
@@ -54,10 +54,10 @@
       <li>
         Make sure that the JUnit project appears in the destination <strong>Folder</strong> field. Then click <strong>Finish</strong>. In the import progress indicator, notice
         that the imported resources are compiled as they are imported into the workbench. This is because the <strong>Perform build automatically on resource modification</strong>
-        option is checked on the Workbench preferences page.&nbsp; (You will be
-        prompted to overwrite the .classpath file in the JUnit project.&nbsp;
+        option is checked on the Workbench preferences page. (You will be
+        prompted to overwrite the .classpath file in the JUnit project. 
         This is because the .classpath resource was created for you when you
-        created the JUnit project.&nbsp; It is safe to overwrite this file.)
+        created the JUnit project. It is safe to overwrite this file.)
       </li>
       <li>
         In the Package Explorer view, expand the JUnit project to view the JUnit packages.
