--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
@@ -22,17 +22,17 @@
         Specification</strong> wizard page, described in Step 4.)
       </li>
       <li>
-        From the menu bar, select <strong>File</strong> &gt; <strong>Export</strong>.
+        Either from the context menu or from the menu bar's <strong>File</strong> menu, select <strong>Export</strong>.
       </li>
       <li>
         Select <strong>JAR file</strong>, then click&nbsp;<strong>Next</strong>.
       </li>
       <li>
-        In the <strong>Jar Package Specification</strong> page, select the resources that you want to export in the <strong>Select the resources to
+        In the <strong>JAR Package Specification</strong> page, select the resources that you want to export in the <strong>Select the resources to
         export&nbsp;</strong>field.
       </li>
       <li>
-        Select the appropriate check box to specify whether you want to <strong>Export generated class files and resources</strong> or <strong>Export Java source files and
+        Select the appropriate check box to specify whether you want to <strong>Export generated class files and resources</strong> or <strong>Export java source files and
         resources</strong>. <strong>Note</strong>: Selected resources are exported in both cases.
       </li>
       <li>
