--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-40.htm
@@ -27,7 +27,7 @@
         select <strong>Navigate &gt; Open Type Hierarchy</strong> from the menu bar
       </li>
     </ul>
-    <strong>Note:</strong> If the selected Java element (or editor selection) is not a type or a compilation unit, the hierarchy will be open on the type enclosing the current
+    <strong>Note:</strong> If the selected Java element (or editor selection) is not a type or a compilation unit, the hierarchy opens on the type enclosing the current
     selection. 
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
