--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-42.htm
@@ -25,7 +25,7 @@
         From the menu bar, select <strong>Window</strong> &gt; <strong>Preferences</strong> and select the <strong>Java</strong> category. The general Java Preferences page opens.
       </li>
       <li>
-        In the <strong>When Opening a Type Hierarchy</strong> category, select the radio button <strong>Open a New Type Hierarchy Perspective</strong>.
+        In the <strong>When Opening a Type Hierarchy</strong> category, select the radio button <strong>Open a new Type Hierarchy Perspective</strong>.
       </li>
     </ol>
     <p>
