--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-43.htm
@@ -22,12 +22,12 @@
         displayed.</em>
       </li>
       <li>
-        In the list pane of the Hierarchy view, make sure that the&nbsp;<strong><strong>Show All Inherited Members</strong></strong> button is toggled on in order to see all the
+        In the list pane of the Hierarchy view, make sure that the <strong>Show All Inherited Members</strong> button is active in order to see all the
         inherited members. <em>Note: The selection might not show all members if a filter (such as <strong>Hide Fields</strong> or <strong>Hide Static Members</strong>) is
         active.</em>
       </li>
       <li>
-        From the pop-up menu of one of the inherited methods, select&nbsp;<strong><strong>Override in <em>class name</em></strong></strong> (where <em>class name</em> is the name
+        From the pop-up menu of one of the inherited methods, select <strong>Override in <em>class name</em></strong> (where <em>class name</em> is the name
         of the class in which the method will be created).
       </li>
     </ol>
