--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
@@ -21,7 +21,7 @@
         On the Package Explorer toolbar, click the <strong>Menu</strong> button and choose <strong>Filters</strong>.
       </li>
       <li>
-        Select or clear the filters that you want to apply to the view (read <strong>Filter Description</strong> to learn about the selected filter's functionality).
+        Select or clear the filters that you want to apply to the view (read <strong>Filter description</strong> to learn about the selected filter's functionality).
       </li>
       <li>
         Optionally, you can select patterns for filtering the view:
