--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
@@ -21,7 +21,7 @@
         Select the <strong>Filters</strong> command from the Package Explorer's drop-down menu.
       </li>
       <li>
-        Clear the <strong>Referenced libraries</strong> checkbox.
+      	In the exclude list clear the checkbox for <span class="control">Referenced libraries</span>.
       </li>
     </ol>
 	<p>
@@ -32,7 +32,7 @@
         Select the <strong>Filters</strong> command from the Package Explorer's drop-down menu.
       </li>
       <li>
-        Select the <strong>Referenced libraries</strong> checkbox.
+      	In the exclude list select the checkbox for <span class="control">Referenced libraries</span>.
       </li>
     </ol>
 	<p>
