--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-54.htm
@@ -15,8 +15,9 @@
     </h1>
     <p>
       <strong>Note:</strong> Keyboard shortcuts used in the section (Java editor-related tasks) are the default key bindings.<br>
-       You can change between the <strong>Default</strong> and the <strong>Emacs</strong> key binding sets by using the <strong>Window &gt; Preferences &gt; Workbench &gt; Editors
-      &gt; Key bindings</strong> combo box.
+       You can change between the <strong>Standard</strong> and the <strong>Emacs</strong> key binding sets by using the
+       <strong>Active configuration</strong> combo box on 
+       <strong>Window &gt; Preferences &gt; Workbench &gt; Keys</strong>.
     </p>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
