--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -295,9 +295,9 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <P><B>Hover information in editor 
       overview</B></P></TD>
     <TD vAlign=top width="70%">The Java editor overview ruler (on the right side of the frame) now shows hover information for problem annotations. 
-      <P align=center><IMG height=150 
+      <P align=center><IMG 
       alt="Overview hover" src="images/overview_hover.gif" 
-      width=435 border=0></P></TD></TR>
+      ></P></TD></TR>
   <TR>
     <TD vAlign=top colSpan=2>
       <HR>
