*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_prompter.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_prompter.htm
@@ -9,8 +9,7 @@
 </head>
 <body>
 <h3>Creating Java specific prompter dialogs</h3>
-<p> The following snippet uses <b><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html">JavaUI</a>
-</b>to open a type prompter dialog:</p>
+<p> The following snippet uses the <b><a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html">JavaUI</a> </b>class to open the Open Type dialog:</p>
 <pre><font color="#4444cc">    public IType selectType() throws JavaModelException {
         SelectionDialog dialog= JavaUI.createTypeDialog(
             parent, new ProgressMonitorDialog(parent),
@@ -26,9 +25,8 @@
             return null;
         return (IType)types[0];
     }</font></pre>
-<p>
-<a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"><b>JavaUI</b></a> provides additional methods for creating package and main type prompter 
-dialogs.
+<p> <a href="../reference/api/org/eclipse/jdt/ui/JavaUI.html"><b>JavaUI</b></a> 
+  provides additional methods for creating Open Package and Open Main Type dialogs. 
 </p>
 <p><a href="../hglegal2003.htm"><img border="0" src="../ngibmcpy2003.gif" alt="Copyright IBM Corporation and others 2000, 2003. All Rights Reserved."> 
   </a> </p>
