--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_ui.htm
@@ -14,41 +14,35 @@
 the Java-specific extensions to the workbench.&nbsp;&nbsp;&nbsp; The JDT UI
 packages include:</p>
 <ul>
-  <li>
-    <b><a href="../reference/api/org/eclipse/jdt/ui/package-summary.html"> org.eclipse.jdt.ui</a> 
-    </b> - provides support classes for presenting Java elements in the user
-    interface.&nbsp; This package exposes constants for retrieving Java user interface parts from the workbench 
-    registry and for retrieving preference settings from the Java preferences.&nbsp;
-    Programming interfaces <a href="../reference/api/org/eclipse/jdt/ui/ITypeHierarchyViewPart.html"><b>ITypeHierarchyViewPart</b></a> and <a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html"> 
-    <b> 
-    IPackagesViewPart</b></a> are provided for interacting with Java views.
+  <li> <b><a href="../reference/api/org/eclipse/jdt/ui/package-summary.html"> 
+    org.eclipse.jdt.ui</a> </b> - provides support classes for presenting Java 
+    elements in the user interface.&nbsp; This package exposes constants for retrieving 
+    Java user interface parts from the workbench registry and for retrieving preference 
+    settings from the Java preferences.&nbsp; Programming interfaces <a href="../reference/api/org/eclipse/jdt/ui/ITypeHierarchyViewPart.html"><b>ITypeHierarchyViewPart</b></a> 
+    and <a href="../reference/api/org/eclipse/jdt/ui/IPackagesViewPart.html"> 
+    <b> IPackagesViewPart</b></a> are provided for interacting with Java views. 
   </li>
-  <li>
-    <b><a href="../reference/api/org/eclipse/jdt/ui/actions/package-summary.html">org.eclipse.jdt.ui.actions</a> 
-    </b>- provides actions and action groups to populate 
-    tool bars, global menu bars and context menus with JDT specific functionality.
-    You should use action groups to populate menus and tool 
-    bars instead of adding actions directly. This shields you from missing 
-    newly added actions or from using outdated menu structures.
-  </li>
+  <li> <b><a href="../reference/api/org/eclipse/jdt/ui/actions/package-summary.html">org.eclipse.jdt.ui.actions</a> 
+    </b>- provides actions and action groups to populate tool bars, global menu 
+    bars and context menus with JDT specific functionality. You should use action 
+    groups to populate menus and tool bars instead of adding actions directly. 
+    This shields you from missing newly added actions or from using outdated menu 
+    structures. </li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/jarpackager/package-summary.html"> 
-    org.eclipse.jdt.ui.jarpackager</a> </b> - provides classes and interfaces to 
-    generate a JAR file.
-  </li>
+    org.eclipse.jdt.ui.jarpackager</a> </b> - provides classes and interfaces 
+    to generate a JAR file. </li>
+  <li><b><a href="../reference/api/org/eclipse/jdt/ui/refactoring/package-summary.html">org.eclipse.jdt.ui.refactoring</a></b> 
+    - provides support for running rename refactorings</li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/package-summary.html"> 
-    org.eclipse.jdt.ui.text</a> </b> - provides support classes for presenting Java 
-    text.&nbsp;
-  </li>
+    org.eclipse.jdt.ui.text</a> </b> - provides support classes for presenting 
+    Java text.&nbsp; </li>
+  <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/java/package-summary.html">org.eclipse.jdt.ui.text.java</a></b></li>
   <li><b><a href="../reference/api/org/eclipse/jdt/ui/text/java/hover/package-summary.html"> 
-    org.eclipse.jdt.ui.text.java.hover</a> </b> - provides implementations for presenting 
-    text hovers in Java editors.&nbsp;
-  </li>
+    org.eclipse.jdt.ui.text.java.hover</a> </b> - provides implementations for 
+    presenting text hovers in Java editors.&nbsp; </li>
   <li><a href="../reference/api/org/eclipse/jdt/ui/wizards/package-summary.html"> 
-    <b> 
-    org.eclipse.jdt.ui.wizards</b></a>  - provides wizard pages for creating and
-    configuring Java 
-    elements.
-  </li>
+    <b> org.eclipse.jdt.ui.wizards</b></a> - provides wizard pages for creating 
+    and configuring Java elements. </li>
 </ul>
 <p><a href="../hglegal2003.htm"><img border="0" src="../ngibmcpy2003.gif"  alt="Copyright IBM Corporation and others 2000, 2003. All Rights Reserved."> 
   </a> </p>
