--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -35,8 +35,8 @@
   </li>
   <li><a href="../guide/jdt_api_open_editor.htm">How do I programmatically launch 
     a Java editor on a file?</a> </li>
-  <li><a href="../guide/jdt_api_prompter.htm">How do I create a Java specific 
-    prompter dialog?</a> <br>
+  <li><a href="../guide/jdt_api_prompter.htm">How do I programatically open 
+    the Open Type dialog?</a> <br>
   </li>
   <li><a href="../guide/jdt_api_render.htm">How do I present Java elements in 
     a standard JFace viewer?</a></li>
