--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
@@ -21,23 +21,33 @@
         In the left pane, expand the <strong>Java</strong> category and select <strong>Organize Imports</strong>.
       </li>
       <li>
-        The Organize Imports page defines the sorting order of import statements. In the Imports list, manage the list of package prefixes as follows: 
+        The Organize Imports page defines the sorting order of import statements.
+        In the Imports list, manage the list of package prefixes as follows: 
         <ul>
           <li>
-            Click&nbsp;<strong>Add</strong> to add a new prefix
+            <strong>New</strong> to add a new prefix
           </li>
           <li>
-            Click&nbsp;<strong>Remove</strong> to remove the selected prefix from the list
+            <strong>Edit</strong> to change the name of an existing prefix
           </li>
           <li>
-            Click the&nbsp;<strong>Up</strong> and&nbsp;<strong>Down</strong> buttons to rearrange the sequence of the list by moving the
-            selected prefix up or down
+            Use <strong>Up</strong> and <strong>Down</strong> buttons to rearrange the sequence
+            of the list by moving the selected prefix up or down
+          </li>
+          <li>
+            <strong>Remove</strong> to remove the selected prefix from the list
+          </li>
+          <li>
+            Use <strong>Load...</strong> and <strong>Save...</strong> to load a list of prefixes from a file
+            or to store it to a file
           </li>
         </ul>
       </li>
       <li>
-        In the&nbsp;<strong>Number of qualified imports before * is used</strong> field, type the number of import statements that are allowed to refer to the
-        same package before&nbsp;<em>&lt;package prefix&gt;.*</em> is used. This number is called the import threshold.
+        In the <strong>Number of imports needed before .*</strong> field,
+        type the number of import statements that are allowed to refer to the
+        same package before <em>&lt;package prefix&gt;.*</em> is used.
+        This number is called the import threshold.
       </li>
       <li>
         Click <strong>OK</strong> when you are done.
