updated for new UI

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
@@ -29,13 +29,17 @@
         From the type's pop-up menu in the Java view, select <strong>Restore from Local History</strong>.
       </li>
       <li>
-        In the upper pane of the resulting dialog, all available editions of the selected element in the local history are displayed.
+        In the upper left pane of the resulting dialog, all available editions of the selected element in the local history are displayed.
       </li>
       <li>
-        Select an edition in the upper pane to view the content of the selected element.
+        In the left pane check all elements that you want to replace.
       </li>
       <li>
-        When you have identified the edition that you want to restore, press <strong>Restore</strong>. The local history edition is loaded into the editor.
+      	For every checked element select an edition in the right hand pane and view its content in the bottom pane.
+      </li>
+      <li>
+        When you have identified the edition that you want to restore, press <strong>Restore</strong>.
+        The local history editions are loaded into the editor.
       </li>
     </ol>
     <p>
