*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>
-      Browsing Java elements with the package explorer
+      Browsing Java elements with the Package Explorer
     </title>
     <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
