updated menu path

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
@@ -28,13 +28,13 @@
         Format the code by either 
         <ul>
           <li>
-            Selecting <strong>Format</strong> from the editor's pop-up menu or
+            Selecting <strong>Source</strong> &gt; <strong>Format</strong> from the editor's pop-up menu or
           </li>
           <li>
             Pressing <strong>Ctrl+Shift+F</strong> or
           </li>
           <li>
-            Selecting<strong>Source &gt; Format</strong> from the menu bar.
+            Selecting <strong>Source</strong> &gt; <strong>Format</strong> from the menu bar.
           </li>
         </ul>
       </li>
