updated for new UI

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-193.htm
@@ -16,7 +16,7 @@
     <p>To show method return types in Java views:</p>
 
     <ul>
-      <li>Open&nbsp; the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance</span>
+      <li>Open the <span class="control">Window &gt; Preferences &gt; Java &gt; Appearance</span>
         page and select the <span class="control">Show method return types</span> checkbox</li>
     </ul>
 
