--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-203.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-203.htm
@@ -15,7 +15,7 @@
     <p>You can define your own templates.</p>
 
     <ul>
-      <li>Go to <span class="control">Window &gt; Preferences &gt; Java &gt; Templates</span> and press the <span class="control">New</span> button.</li>
+      <li>Go to <span class="control">Window &gt; Preferences &gt; Java &gt; Editor &gt; Templates</span> and press the <span class="control">New</span> button.</li>
 
       <li>In the <span class="control">Name</span> field, enter the name for the template. This name need not be unique. It is used for selecting templates from the Code Assist
       list.</li>
