--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-59.htm
@@ -14,7 +14,7 @@
       Adding required import statements
     </h1>
     <p>
-      The Java editor can help you add required import statements for a selected type inside a compilation unit.
+      The Java editor can help you adding required import statements for a selected type inside a compilation unit.
     </p>
     <ol>
       <li>
