--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -13,7 +13,7 @@
       Using the local history
     </h1>
     <p>
-      The JDT extends the workbench concept of local history in three ways:
+      The JDT extends the workbench concept of a local history in three ways:
     </p>
     <ul>
       <li>
