Moved ant view image

--- a/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
+++ b/bundles/org.eclipse.platform.doc.user/whatsNew/platform_whatsnew.html
@@ -90,7 +90,7 @@ size throughout.]</p>
       Ant view allows you to view your Ant build files in one place and simplifies
       running a single Ant target. The view includes a search button for
       finding Ant build files in the workspace to add to the view.
-      <p align="center"><img border="0" src="images/ant-view.gif" width="292" height="169"></td>
+      <p align="center"><img border="0" src="../images/ant-view.gif" width="292" height="169"></td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>External tools &amp; launch
