*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-13.htm
@@ -32,7 +32,7 @@
         Click <strong>Next</strong>. The Java Settings Page opens.
       </li>
       <li>
-        On the <strong>Source</strong> tab, select the <strong>Use the project as source container</strong> radio button.
+        On the <strong>Source</strong> tab, check that the project is the only source folder and the default output folder.
       </li>
       <li>
         Optionally, on the <strong>Projects</strong> tab, select the required projects to be on the build path for this project. Use these options only if your project depends on
