--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-ant-running.htm
@@ -30,8 +30,8 @@ as the build file runs.
 </p>
 
 <p>These steps create a persisted launch configuration. The newly created configuration will
-appear in the launch history under <b>Run &gt External Tools</b> and will be available in the
-launch configuration dialog which is opened by clicking <b>Run &gt External Tools &gt External Tools...</b>.
+appear in the launch history under <b>Run &gt; External Tools</b> and will be available in the
+launch configuration dialog which is opened by clicking <b>Run &gt; External Tools &gt; External Tools...</b>.
 </p>
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
